// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Row component with correct data props for expense 1`] = `
<Row
  description="Uber"
  type="DEBIT"
  value={17}
>
  <div
    className="row"
  >
    <span>
      Uber
    </span>
    <span
      className="debit"
    >
      R$17,00
    </span>
  </div>
</Row>
`;

exports[`should render Row component with correct data props for revenue 1`] = `
<Row
  description="Salary"
  type="CREDIT"
  value={2000}
>
  <div
    className="row"
  >
    <span>
      Salary
    </span>
    <span
      className="credit"
    >
      R$2.000,00
    </span>
  </div>
</Row>
`;
